<resources>
    <string name="app_name">Travel App</string>

    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Attempt">Number of attempt left: 5</string>
    <string name="Register">Create Account</string>

    <string name="Flight">Search Flights</string>
    <string name="Hotel">Search Hotel</string>
    <string name="Trip">Trip Itinerary</string>
    <string name="Setting">Setting</string>
    <string name="Back">Go Back</string>
    <string name="Logout">LogOut</string>

    <string name="Guests">Guests</string>
    <string name="CheckIn">Check-In Date</string>
    <string name="CheckOut">Check-Out Date</string>

    <string name="originPlace">Departure</string>
    <string name="destinationPlace">Destination</string>
    <string name="outboundDate">Outbound Date</string>
    <string name="inboundDate">Inbound Date</string>
    <string name="search">Search</string>

    <string name="view_result">View Result</string>

</resources>
