<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HotelActivity">

    <Button
        android:id="@+id/hotelLogout"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/Logout"
        android:layout_gravity="end"    />

    <Button
        android:id="@+id/hotelBack"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/Back"
        android:layout_gravity="end"    />

    <EditText
        android:id="@+id/destinationPlace"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textShortMessage"
        android:hint="@string/destinationPlace"  />

    <EditText
        android:id="@+id/guests"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textShortMessage"
        android:hint="@string/Guests" />

    <EditText
        android:id="@+id/checkIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/CheckIn" />

    <EditText
        android:id="@+id/checkOut"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/CheckOut"  />

    <Button
        android:id="@+id/searchHotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/search" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/responseView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </ScrollView>
    </RelativeLayout>

</LinearLayout>