<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/registerBack"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/Back"
        android:layout_gravity="end"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="160dp"
        android:drawableStart="@drawable/username"
        android:ems="10"
        android:hint="@string/Username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/Password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/rePassword"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="Re-Enter Password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Register"
        android:textAllCaps="false" />



</LinearLayout>